--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -188,6 +188,8 @@ jobs:
       fail-fast: false
       matrix:
         settings:
+          - host: macos-latest
+            target: 'x86_64-apple-darwin'
           - host: windows-latest
             target: x86_64-pc-windows-msvc
         node:
