--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -22,36 +22,36 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          - host: macos-latest
-            target: x86_64-apple-darwin
-            architecture: x64
-            build: |
-              yarn build
-              strip -x *.node
-          - host: windows-latest
-            build: yarn build
-            target: x86_64-pc-windows-msvc
-            architecture: x64
-          - host: ubuntu-18.04
-            target: x86_64-unknown-linux-gnu
-            architecture: x64
-            docker: |
-              docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian
-              docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian builder
-            build: |
-              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
-          - host: ubuntu-18.04
-            target: x86_64-unknown-linux-musl
-            architecture: x64
-            docker: |
-              docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine
-              docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
-            build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
-          - host: macos-latest
-            target: aarch64-apple-darwin
-            build: |
-              yarn build --target=aarch64-apple-darwin
-              strip -x *.node
+          # - host: macos-latest
+          #   target: x86_64-apple-darwin
+          #   architecture: x64
+          #   build: |
+          #     yarn build
+          #     strip -x *.node
+          # - host: windows-latest
+          #   build: yarn build
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
+          # - host: ubuntu-18.04
+          #   target: x86_64-unknown-linux-gnu
+          #   architecture: x64
+          #   docker: |
+          #     docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian
+          #     docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian builder
+          #   build: |
+          #     docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
+          # - host: ubuntu-18.04
+          #   target: x86_64-unknown-linux-musl
+          #   architecture: x64
+          #   docker: |
+          #     docker pull $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine
+          #     docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
+          #   build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build && strip *.node"
+          # - host: macos-latest
+          #   target: aarch64-apple-darwin
+          #   build: |
+          #     yarn build --target=aarch64-apple-darwin
+          #     strip -x *.node
           - host: ubuntu-18.04
             architecture: x64
             target: aarch64-unknown-linux-gnu
@@ -70,15 +70,15 @@ jobs:
             build: |
               yarn build --target=armv7-unknown-linux-gnueabihf
               arm-linux-gnueabihf-strip *.node
-          - host: ubuntu-18.04
-            architecture: x64
-            target: aarch64-unknown-linux-musl
-            downloadTarget: aarch64-unknown-linux-musl
-            docker: |
-              docker pull ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
-              docker tag ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
-            build: |
-              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build --target=aarch64-unknown-linux-musl && /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node"
+          # - host: ubuntu-18.04
+          #   architecture: x64
+          #   target: aarch64-unknown-linux-musl
+          #   downloadTarget: aarch64-unknown-linux-musl
+          #   docker: |
+          #     docker pull ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
+          #     docker tag ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine builder
+          #   build: |
+          #     docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd)/../../../:/build -w /build builder sh -c "cd tooling/cli.rs/node && yarn build --target=aarch64-unknown-linux-musl && /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node"
           #- host: windows-latest
           #  architecture: x64
           #  target: aarch64-pc-windows-msvc
@@ -180,123 +180,123 @@ jobs:
   #          name: bindings-freebsd
   #          path: tooling/cli.rs/node/${{ env.APP_NAME }}.*.node
   #          if-no-files-found: error
-  test-macOS-windows-binding:
-    name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        settings:
-          - host: macos-latest
-            target: 'x86_64-apple-darwin'
-          - host: windows-latest
-            target: x86_64-pc-windows-msvc
-        node:
-          - '12'
-          - '14'
-          - '16'
-    runs-on: ${{ matrix.settings.host }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-          check-latest: true
-          cache: yarn
-          cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
-      - name: Install dependencies
-        run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: bindings-${{ matrix.settings.target }}
-          path: 'tooling/cli.rs/node/'
-      - name: List packages
-        run: ls -R .
-        shell: bash
-      - name: Test bindings
-        run: yarn test
-  test-linux-x64-gnu-binding:
-    name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        node:
-          - '12'
-          - '14'
-          - '16'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-          check-latest: true
-          cache: yarn
-          cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
-      - name: Install dependencies
-        run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: bindings-x86_64-unknown-linux-gnu
-          path: 'tooling/cli.rs/node/'
-      - name: List packages
-        run: ls -R .
-        shell: bash
-      - name: install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
-      - name: Test bindings
-        run: yarn test
-  test-linux-x64-musl-binding:
-    name: Test bindings on x86_64-unknown-linux-musl - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        node:
-          - '12'
-          - '14'
-          - '16'
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-          check-latest: true
-          cache: yarn
-          cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
-      - name: Install dependencies
-        run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: bindings-x86_64-unknown-linux-musl
-          path: 'tooling/cli.rs/node/'
-      - name: List packages
-        run: ls -R .
-        shell: bash
-      - name: Install system dependencies
-        run: |
-          apk add openssl-dev musl-dev glib-dev cairo-dev pkgconfig gdk-pixbuf-dev webkit2gtk-dev curl libappindicator-dev patchelf librsvg-dev gtk+3.0-dev
-      - name: Setup and run tests
-        run: |
-          rustup install stable
-          rustup default stable
-          yarn test
-          ls -la
+  # test-macOS-windows-binding:
+  #   name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
+  #   needs:
+  #     - build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       settings:
+  #         - host: macos-latest
+  #           target: 'x86_64-apple-darwin'
+  #         - host: windows-latest
+  #           target: x86_64-pc-windows-msvc
+  #       node:
+  #         - '12'
+  #         - '14'
+  #         - '16'
+  #   runs-on: ${{ matrix.settings.host }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Setup node
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         check-latest: true
+  #         cache: yarn
+  #         cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
+  #     - name: Install dependencies
+  #       run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: bindings-${{ matrix.settings.target }}
+  #         path: 'tooling/cli.rs/node/'
+  #     - name: List packages
+  #       run: ls -R .
+  #       shell: bash
+  #     - name: Test bindings
+  #       run: yarn test
+  # test-linux-x64-gnu-binding:
+  #   name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
+  #   needs:
+  #     - build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       node:
+  #         - '12'
+  #         - '14'
+  #         - '16'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Setup node
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         check-latest: true
+  #         cache: yarn
+  #         cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
+  #     - name: Install dependencies
+  #       run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: bindings-x86_64-unknown-linux-gnu
+  #         path: 'tooling/cli.rs/node/'
+  #     - name: List packages
+  #       run: ls -R .
+  #       shell: bash
+  #     - name: install system dependencies
+  #       run: |
+  #         sudo apt-get update
+  #         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
+  #     - name: Test bindings
+  #       run: yarn test
+  # test-linux-x64-musl-binding:
+  #   name: Test bindings on x86_64-unknown-linux-musl - node@${{ matrix.node }}
+  #   needs:
+  #     - build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       node:
+  #         - '12'
+  #         - '14'
+  #         - '16'
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Setup node
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         check-latest: true
+  #         cache: yarn
+  #         cache-dependency-path: 'tooling/cli.rs/node/yarn.lock'
+  #     - name: Install dependencies
+  #       run: yarn install --ignore-scripts --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: bindings-x86_64-unknown-linux-musl
+  #         path: 'tooling/cli.rs/node/'
+  #     - name: List packages
+  #       run: ls -R .
+  #       shell: bash
+  #     - name: Install system dependencies
+  #       run: |
+  #         apk add openssl-dev musl-dev glib-dev cairo-dev pkgconfig gdk-pixbuf-dev webkit2gtk-dev curl libappindicator-dev patchelf librsvg-dev gtk+3.0-dev
+  #     - name: Setup and run tests
+  #       run: |
+  #         rustup install stable
+  #         rustup default stable
+  #         yarn test
+  #         ls -la
   test-linux-arm-bindings:
     name: Test bindings on ${{ matrix.image }} - node@${{ matrix.node }}
     needs:
@@ -363,9 +363,9 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       #- build-freebsd
-      - test-macOS-windows-binding
-      - test-linux-x64-gnu-binding
-      - test-linux-x64-musl-binding
+      #- test-macOS-windows-binding
+      #- test-linux-x64-gnu-binding
+      #- test-linux-x64-musl-binding
       - test-linux-arm-bindings
     steps:
       - uses: actions/checkout@v2
