--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -3,14 +3,10 @@ env:
   DEBUG: napi:*
   APP_NAME: cli
   MACOSX_DEPLOYMENT_TARGET: '10.13'
-'on':
+on:
   workflow_dispatch:
   repository_dispatch:
     types: [publish-clijs]
-  # TODO: remove this!
-  push:
-    branches:
-      - 'feat/cli.js-tests'
 
 defaults:
   run:
@@ -379,10 +375,10 @@ jobs:
       - name: List packages
         run: ls -R ./npm
         shell: bash
-      #- name: Publish
-      #  run: |
-      #    echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      #    npm publish
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #    NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish
+        run: |
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
