--- a/tooling/cli.rs/node/package.json
+++ b/tooling/cli.rs/node/package.json
@@ -36,8 +36,12 @@
     }
   },
   "devDependencies": {
-    "@napi-rs/cli": "^2.4.2",
-    "prettier": "^2.5.1"
+    "@napi-rs/cli": "2.4.2",
+    "cross-spawn": "7.0.3",
+    "fs-extra": "10.0.0",
+    "jest": "27.5.1",
+    "jest-transform-toml": "1.0.0",
+    "prettier": "2.5.1"
   },
   "engines": {
     "node": ">= 10"
@@ -50,9 +54,9 @@
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "node ./tauri.js help",
+    "test": "jest --runInBand --forceExit --no-cache",
     "version": "napi version",
-    "tauri": "tauri",
+    "tauri": "node ./tauri.js",
     "format": "prettier --write ./package.json ./tauri.js",
     "format:check": "prettier --check ./package.json ./tauri.js"
   }
