--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -136,19 +136,19 @@ jobs:
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         with:
-          path: tolling/cli/target
+          path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tolling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tolling/cli/Cargo.lock') }}
+            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
             ${{ matrix.platform }}-stable-cargo-cli-
 
       - name: build CLI
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path ./tolling/cli/Cargo.toml
+          args: --manifest-path ./tooling/cli/Cargo.toml
 
   test-tauri-js-cli:
     runs-on: ${{ matrix.platform }}
@@ -170,7 +170,7 @@ jobs:
         with:
           node-version: 14
           cache: yarn
-          cache-dependency-path: tolling/cli/node/yarn.lock
+          cache-dependency-path: tooling/cli/node/yarn.lock
       - name: install webkit2gtk (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
@@ -210,29 +210,29 @@ jobs:
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         with:
-          path: tolling/cli/target
+          path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tolling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tolling/cli/Cargo.lock') }}
+            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
             ${{ matrix.platform }}-stable-cargo-cli-
 
       - name: Cache template cargo target
         uses: actions/cache@v2
         with:
-          path: tolling/cli/node/test/jest/fixtures/empty/src-tauri/target
+          path: tooling/cli/node/test/jest/fixtures/empty/src-tauri/target
           # Add date to the cache to keep it up to date
-          key: ${{ matrix.platform }}-stable-template-${{ hashFiles('tolling/cli/templates/app/**') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli/templates/app/**') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ${{ matrix.platform }}-stable-template-${{ hashFiles('tolling/cli/templates/app/**') }}
+            ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli/templates/app/**') }}
             ${{ matrix.platform }}-stable-template-
 
       - name: test
         timeout-minutes: 30
         run: |
-          cd ./tolling/cli/node
+          cd ./tooling/cli/node
           yarn
           yarn build
           yarn test
