--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,8 +17,8 @@
 
 /tooling/bundler/ @tauri-apps/bundler
 
-/tolling/cli/ @tauri-apps/core
+/tooling/cli/ @tauri-apps/core
 
-/tolling/cli/node/ @tauri-apps/js-cli
+/tooling/cli/node/ @tauri-apps/js-cli
 
 /core/** @tauri-apps/core
