--- a/examples/sidecar/package.json
+++ b/examples/sidecar/package.json
@@ -8,7 +8,7 @@
     ]
   },
   "scripts": {
-    "tauri": "node ../../tolling/cli/node/tauri.js",
+    "tauri": "node ../../tooling/cli/node/tauri.js",
     "package": "pkg package.json --output src-tauri/binaries/app && node scripts/move-binary.js"
   },
   "devDependencies": {
