--- a/examples/streaming/package.json
+++ b/examples/streaming/package.json
@@ -2,6 +2,6 @@
   "name": "streaming",
   "version": "1.0.0",
   "scripts": {
-    "tauri": "node ../../tolling/cli/node/tauri.js"
+    "tauri": "node ../../tooling/cli/node/tauri.js"
   }
 }
