--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -64,7 +64,7 @@ humansize = "1.1"
 heck = "0.4"
 
 [build-dependencies]
-tauri-utils = { version = "1.0.0-beta.3", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
+tauri-utils = { version = "1.0.0-rc.0", features = [ "schema", "isolation" ], path = "../../core/tauri-utils" }
 schemars = { version = "0.8", features = [ "url" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
