--- a/tooling/cli/templates/plugin/backend/examples/vanilla/package.json
+++ b/tooling/cli/templates/plugin/backend/examples/vanilla/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tauri-apps/cli": "^1.0.0-beta.10"
+    "@tauri-apps/cli": "^1.0.0-rc.0"
   }
 }
