--- a/tooling/cli/templates/plugin/with-api/examples/svelte-app/package.json
+++ b/tooling/cli/templates/plugin/with-api/examples/svelte-app/package.json
@@ -12,7 +12,7 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "8.3.0",
-    "@tauri-apps/cli": "1.0.0-beta.10",
+    "@tauri-apps/cli": "1.0.0-rc.0",
     "@tsconfig/svelte": "3.0.0",
     "rollup": "2.67.1",
     "rollup-plugin-css-only": "3.1.0",
