--- a/tooling/cli/templates/plugin/with-api/package.json
+++ b/tooling/cli/templates/plugin/with-api/package.json
@@ -19,7 +19,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "@tauri-apps/api": "1.0.0-beta.8",
+    "@tauri-apps/api": "1.0.0-rc.0",
     "tslib": "^2.1.0"
   }
 }
