fix(ci): covector configuration and usage
[skip ci]

--- a/.changes/config.json
+++ b/.changes/config.json
@@ -255,7 +255,8 @@
       "dependencies": [
         "tauri-codegen",
         "tauri-utils"
-      ]
+      ],
+      "postversion": "node ../../.scripts/covector/sync-cli-metadata.js ${ pkg.pkg } ${ release.type }"
     },
     "tauri": {
       "path": "./core/tauri",
@@ -265,7 +266,8 @@
         "tauri-utils",
         "tauri-runtime",
         "tauri-runtime-wry"
-      ]
+      ],
+      "postversion": "node ../../.scripts/covector/sync-cli-metadata.js ${ pkg.pkg } ${ release.type }"
     },
     "cli.js": {
       "path": "./tooling/cli/node",
@@ -273,6 +275,7 @@
       "dependencies": [
         "cli.rs"
       ],
+      "postversion": "node ../../../.scripts/covector/sync-cli-metadata.js ${ pkg.pkg } ${ release.type }",
       "prepublish": [],
       "publish": [],
       "postpublish": []
