--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -12,7 +12,7 @@ license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Command line interface for building Tauri apps"
-include = [ "src/", "/templates", "MergeModules/", "*.json", "*.rs" ]
+include = [ "src/", "/templates", "MergeModules/", "*.json", "*.rs", "vswhere.exe" ]
 
 [[bin]]
 name = "cargo-tauri"
