--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -3,7 +3,7 @@ members = [ "node" ]
 
 [package]
 name = "tauri-cli"
-version = "1.0.0-rc.0"
+version = "1.0.0-rc.1"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 edition = "2021"
 rust-version = "1.57"
@@ -12,7 +12,14 @@ license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Command line interface for building Tauri apps"
-include = [ "src/", "/templates", "MergeModules/", "*.json", "*.rs", "vswhere.exe" ]
+include = [
+  "src/",
+  "/templates",
+  "MergeModules/",
+  "*.json",
+  "*.rs",
+  "vswhere.exe"
+]
 
 [[bin]]
 name = "cargo-tauri"
