--- a/.changes/config.json
+++ b/.changes/config.json
@@ -72,7 +72,7 @@
       ],
       "assets": [
         {
-          "path": "${ pkg.path }/target/package/${ pkgFile.pkg.name }-${ pkgFile.version }.crate",
+          "path": "${ pkg.path }/target/package/${ pkg.pkg }-${ pkgFile.version }.crate",
           "name": "${ pkg.pkg }-${ pkgFile.version }.crate"
         }
       ]
@@ -287,7 +287,13 @@
         "tauri-bundler",
         "tauri-utils"
       ],
-      "postversion": "cargo check"
+      "postversion": "cargo check ${ pkg.crate || pkg.pkg }",
+      "assets": [
+        {
+          "path": "${ pkg.path }/target/package/tauri-cli-${ pkgFile.version }.crate",
+          "name": "${ pkg.pkg }-${ pkgFile.version }.crate"
+        }
+      ]
     },
     "create-tauri-app": {
       "path": "./tooling/create-tauri-app",
