feat(ci): use stable toolchain for fmt and clippy checks

--- a/.github/workflows/core-lint-fmt.yml
+++ b/.github/workflows/core-lint-fmt.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable
           override: true
           components: rustfmt, clippy
 
@@ -42,33 +42,33 @@ jobs:
         with:
           path: ~/.cargo/registry
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-registry-
+            ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-registry-
 
       - name: Cache cargo index
         uses: actions/cache@v2.1.4
         with:
           path: ~/.cargo/git
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-index-
+            ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-index-
 
       - name: Cache core cargo target
         uses: actions/cache@v2
         with:
           path: target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-core-
+            ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-core-
 
       - uses: actions-rs/clippy-check@v1
         with:
@@ -90,7 +90,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable
           override: true
           components: rustfmt, clippy
 
@@ -108,33 +108,33 @@ jobs:
         with:
           path: ~/.cargo/registry
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-registry-
+            ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-registry-
 
       - name: Cache cargo index
         uses: actions/cache@v2.1.4
         with:
           path: ~/.cargo/git
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-index-
+            ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-index-
 
       - name: Cache CLI cargo target
         uses: actions/cache@v2
         with:
           path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
-            ubuntu-latest-nightly-cargo-cli-
+            ubuntu-latest-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
+            ubuntu-latest-stable-cargo-cli-
 
       - uses: actions-rs/cargo@v1
         with:
@@ -157,7 +157,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable
           override: true
           components: rustfmt, clippy
 
@@ -174,33 +174,33 @@ jobs:
         with:
           path: ~/.cargo/registry
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-registry-
+            ubuntu-latest-stable-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-registry-
 
       - name: Cache cargo index
         uses: actions/cache@v2.1.4
         with:
           path: ~/.cargo/git
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-index-${{ hashFiles('**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-index-
+            ubuntu-latest-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-index-
 
       - name: Cache core cargo target
         uses: actions/cache@v2
         with:
           path: target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
+          key: ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ubuntu-latest-nightly-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}
-            ubuntu-latest-nightly-cargo-core-
+            ubuntu-latest-stable-cargo-core-${{ hashFiles('core/**/Cargo.toml') }}
+            ubuntu-latest-stable-cargo-core-
 
       - uses: actions-rs/clippy-check@v1
         with:
