perf(ci): change path for test-core

--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -14,7 +14,7 @@ on:
       - '.github/workflows/test-core.yml'
       - 'core/**'
       - 'examples/**'
-      - 'tooling/**'
+      - 'tooling/cli/**'
 
 env:
   RUST_BACKTRACE: 1
