--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-License-Identifier: MIT
 
-name: test bundler
+name: test CLI
 
 on:
   push:
@@ -11,13 +11,14 @@ on:
       - next
   pull_request:
     paths:
-      - '.github/workflows/test-bundler.yml'
-      - 'tooling/bundler/**'
+      - '.github/workflows/test-cli.yml'
+      - 'tooling/cli/**'
+
 env:
   RUST_BACKTRACE: 1
 
 jobs:
-  build-tauri-bundler:
+  test-tauri-cli:
     runs-on: ${{ matrix.platform }}
 
     strategy:
@@ -31,6 +32,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          override: true
 
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
@@ -62,52 +64,49 @@ jobs:
             ${{ matrix.platform }}-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
             ${{ matrix.platform }}-stable-cargo-index-
 
-      - name: Cache bundler cargo target
+      - name: Cache CLI cargo target
         uses: actions/cache@v2
         with:
-          path: tooling/bundler/target
+          path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ${{ matrix.platform }}-stable-cargo-bundler-${{ hashFiles('tooling/bundler/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ${{ matrix.platform }}-stable-cargo-bundler-${{ hashFiles('tooling/bundler/Cargo.lock') }}
-            ${{ matrix.platform }}-stable-cargo-bundler-
+            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
+            ${{ matrix.platform }}-stable-cargo-cli-
 
-      - name: test
-        run: |
-          cd ./tooling/bundler
-          cargo test
+      - name: build CLI
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --manifest-path ./tooling/cli/Cargo.toml
 
-  fmt_check:
-    runs-on: ubuntu-latest
+  test-tauri-js-cli:
+    runs-on: ${{ matrix.platform }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-          components: rustfmt
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --manifest-path ./tooling/bundler/Cargo.toml --all -- --check
-
-  clippy-check:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: install minimal stable with clippy and rustfmt
+      - name: install Rust stable
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
           override: true
-          components: rustfmt, clippy
+      - name: setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          cache: yarn
+          cache-dependency-path: tooling/cli/node/yarn.lock
+      - name: install webkit2gtk (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
 
       - name: Get current date
         run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
@@ -139,20 +138,32 @@ jobs:
             ${{ matrix.platform }}-stable-cargo-index-${{ hashFiles('**/Cargo.toml') }}
             ${{ matrix.platform }}-stable-cargo-index-
 
-      - name: Cache bundler cargo target
+      - name: Cache CLI cargo target
         uses: actions/cache@v2
         with:
-          path: tooling/bundler/target
+          path: tooling/cli/target
           # Add date to the cache to keep it up to date
-          key: ${{ matrix.platform }}-stable-cargo-bundler-${{ hashFiles('tooling/bundler/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
-            ${{ matrix.platform }}-stable-cargo-bundler-${{ hashFiles('tooling/bundler/Cargo.lock') }}
-            ${{ matrix.platform }}-stable-cargo-bundler-
+            ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli/Cargo.lock') }}
+            ${{ matrix.platform }}-stable-cargo-cli-
 
-      - name: clippy check
-        uses: actions-rs/clippy-check@v1
+      - name: Cache template cargo target
+        uses: actions/cache@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --manifest-path ./tooling/bundler/Cargo.toml --all-targets -- -D warnings
-          name: bundler
+          path: tooling/cli/node/test/jest/fixtures/empty/src-tauri/target
+          # Add date to the cache to keep it up to date
+          key: ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli/templates/app/**') }}-${{ env.CURRENT_DATE }}
+          # Restore from outdated cache for speed
+          restore-keys: |
+            ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli/templates/app/**') }}
+            ${{ matrix.platform }}-stable-template-
+
+      - name: test
+        timeout-minutes: 30
+        run: |
+          cd ./tooling/cli/node
+          yarn
+          yarn build
+          yarn test
