--- a/.github/workflows/lint-fmt-core.yml
+++ b/.github/workflows/lint-fmt-core.yml
@@ -40,7 +40,7 @@ jobs:
       matrix:
         clippy:
           - { args: '', key: 'empty' }
-          - { args: '--all-features', key: 'all' }
+          - { args: '--features compression,wry,isolation,custom-protocol,api-all,cli,updater,system-tray', key: 'all' }
           - { args: '--no-default-features', key: 'no-default' }
           - { args: '--features custom-protocol', key: 'custom-protocol' }
           - { args: '--features api-all', key: 'api-all' }
