--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-License-Identifier: MIT
 
-name: eslint check
+name: api and cli.js lint check
 
 on:
   pull_request:
